--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tools/re-pwn/embe221ed-scripts"]
 	path = tools/re-pwn/embe221ed-scripts
 	url = https://github.com/qrxnz/embe221ed-scripts.git
+[submodule "tools/cryptography/mRemoteNG_password_decrypt"]
+	path = tools/cryptography/mRemoteNG_password_decrypt
+	url = https://github.com/qrxnz/mRemoteNG_password_decrypt.git
